--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,8 +4,8 @@
 	height: 100vh;
 	.back-wrap {
 		position: absolute;
-		bottom: 80px;
-		left: 92px;
+		top: 975px;
+		left: 80px;
 		.back {
 			height: 60px;
 			width: 60px;
